<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".06"
        android:padding="5dp"
        android:background="@color/amarelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imv_menu"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/menu_icon"
            android:src="@drawable/menu_icon" />

        <ImageView
            android:id="@+id/imv_logo"
            android:layout_width="wrap_content"
            android:layout_toStartOf="@id/imv_search"
            android:layout_toEndOf="@+id/imv_menu"
            android:layout_height="40dp"
            android:contentDescription="@string/menu_logo"
            android:src="@drawable/menu_logo" />

        <ImageView
            android:id="@+id/imv_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/search"
            android:src="@drawable/baseline_search_12" />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>