<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto"
    tools:context=".DailyMealsFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="15dp"
        android:text="@string/daily_recipe_for_you"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/baseline_star_24"
        app:layout_constraintBottom_toTopOf="@+id/shapeAbleImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintVertical_bias=".09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday_april_18_2022"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@id/viewBackground"
        app:layout_constraintBottom_toBottomOf="@id/viewBackground"
        app:layout_constraintStart_toStartOf="@id/viewBackground"
        app:layout_constraintEnd_toEndOf="@id/viewBackground"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeAbleImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintWidth_percent=".9"
        app:shapeAppearanceOverlay="@style/rounded_corner" />

    <View
        android:id="@+id/viewBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_shapeview"
        app:layout_constraintStart_toStartOf="@id/shapeAbleImageView"
        app:layout_constraintTop_toTopOf="@id/shapeAbleImageView"
        app:layout_constraintEnd_toEndOf="@id/shapeAbleImageView"
        app:layout_constraintBottom_toBottomOf="@id/shapeAbleImageView"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/eggs_benedict"
        android:textColor="@color/white"
        app:layout_constraintWidth_percent=".5"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/shapeAbleImageView"
        app:layout_constraintStart_toStartOf="@+id/shapeAbleImageView"
        app:layout_constraintTop_toTopOf="@+id/shapeAbleImageView"
        app:layout_constraintVertical_bias=".85" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_25m"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:drawablePadding="10dp"
        app:layout_constraintHorizontal_bias=".9"
        app:layout_constraintBottom_toBottomOf="@+id/tv_desc"
        app:layout_constraintEnd_toEndOf="@+id/shapeAbleImageView"
        app:layout_constraintStart_toEndOf="@+id/tv_desc"
        app:drawableTint="@color/white"
        app:drawableStartCompat="@drawable/baseline_access_time_24" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/makeItBtn"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/amarelo"
        android:drawableLeft="@drawable/chef_icon"
        android:text="@string/make_it_now"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/shapeAbleImageView"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toStartOf="@+id/shapeAbleImageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"
        android:text="@string/recent_meals"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/history_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/makeItBtn" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recDailyMeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:listitem="@layout/item_daily_meal">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tvSeeAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recDailyMeal"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@drawable/background_button"
                android:paddingStart="60dp"
                android:paddingTop="10dp"
                android:paddingEnd="60dp"
                android:paddingBottom="10dp"
                android:text="@string/see_all"
                android:textSize="16sp" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".06"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imv_menu"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:contentDescription="@string/menu_icon"
            android:src="@drawable/menu_icon" />

        <ImageView
            android:id="@+id/imv_logo"
            android:layout_width="wrap_content"
            android:layout_toStartOf="@id/imv_search"
            android:layout_toEndOf="@+id/imv_menu"
            android:layout_height="30dp"
            android:contentDescription="@string/menu_logo"
            android:src="@drawable/menu_logo" />

        <ImageView
            android:id="@+id/imv_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/search"
            android:src="@drawable/baseline_search_24" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>