<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray_1"
    tools:context=".FavouriteListMealsFragment">

    <ImageView
        android:id="@+id/imgBackBtn"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_margin="@dimen/_10dp"
        android:contentDescription="@string/menu_icon"
        android:src="@drawable/baseline_chevron_left_24_black"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_margin="@dimen/_10dp"
        android:contentDescription="@string/search"
        android:src="@drawable/baseline_search_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".1" />

    <ImageView
        android:id="@+id/imv_logo"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintWidth_percent=".2"
        app:layout_constraintHeight_percent=".05"
        android:layout_margin="@dimen/_10dp"
        android:contentDescription="@string/menu_logo"
        android:src="@drawable/menu_logo"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imgBackBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintHeight_percent=".9"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_logo">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteRec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_daily_meal"/>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>